--- a/package.json
+++ b/package.json
@@ -9,13 +9,30 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@apollo/client": "^3.5.10",
+    "@chakra-ui/icons": "^1.1.7",
+    "@chakra-ui/react": "^1.8.6",
+    "@emotion/react": "^11.8.2",
+    "@emotion/styled": "^11.8.1",
+    "@fontsource/inter": "^4.5.5",
+    "@fontsource/public-sans": "^4.5.3",
+    "@hookform/resolvers": "^2.8.8",
+    "framer-motion": "^6.2.8",
+    "graphql": "^16.3.0",
     "next": "12.1.0",
+    "next-auth": "^4.3.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-hook-form": "^7.28.0",
+    "react-icons": "^4.3.1",
+    "sharp": "^0.30.3",
+    "yup": "^0.32.11",
+    "zustand": "^3.7.1"
   },
   "devDependencies": {
     "@types/node": "17.0.21",
     "@types/react": "17.0.40",
+    "apollo": "^2.33.9",
     "eslint": "8.11.0",
     "eslint-config-next": "12.1.0",
     "typescript": "4.6.2"
