--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "apollo:codegen": "apollo client:codegen --target typescript --config apollo.config.js  --outputFlat \"src/types\""
   },
   "dependencies": {
     "@apollo/client": "^3.5.10",
@@ -18,7 +19,7 @@
     "@fontsource/public-sans": "^4.5.3",
     "@hookform/resolvers": "^2.8.8",
     "framer-motion": "^6.2.8",
-    "graphql": "^16.3.0",
+    "graphql": "^5.5.3",
     "next": "12.1.0",
     "next-auth": "^4.3.0",
     "react": "17.0.2",
@@ -36,5 +37,9 @@
     "eslint": "8.11.0",
     "eslint-config-next": "12.1.0",
     "typescript": "4.6.2"
+  },
+  "resolutions": {
+    "graphql": "15.5.3",
+    "**/graphql": "15.5.3"
   }
 }
