--- a/package.json
+++ b/package.json
@@ -19,14 +19,15 @@
     "@fontsource/public-sans": "^4.5.3",
     "@hookform/resolvers": "^2.8.8",
     "framer-motion": "^6.2.8",
-    "graphql": "^5.5.3",
     "next": "12.1.0",
+    "graphql":"15.5.3",
     "next-auth": "^4.3.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-hook-form": "^7.28.0",
     "react-icons": "^4.3.1",
     "sharp": "^0.30.3",
+    "use-sound": "^4.0.1",
     "yup": "^0.32.11",
     "zustand": "^3.7.1"
   },
